--- a/style.css
+++ b/style.css
@@ -20,9 +20,14 @@ h2 {
 button {
 	display: block;
 	margin-bottom: 20px;
-	height: 100px;
+	height: 50;
 	width: 100px;
-	border-radius: 50%;
+	border-radius: 50px;
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	text-decoration: solid;
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
 	border: 1px solid #000;
 	background-color: #b5d8a8;
 }
