--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ header, footer {
 	text-align: center;
 }
 
+body {
+	background-image: url('./resources/opera.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+  }
+
 main {
 	display: flex;
 	flex-wrap: wrap;
@@ -17,7 +23,7 @@ h2 {
 	margin-bottom: 10px;
 }
 
-button {
+.social-link {
 	display: block;
 	margin-bottom: 20px;
 	height: 50;
@@ -36,9 +42,16 @@ button {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	width: max-content;
 	height: auto;
-	width: 100px;
 }
 
-
-
+.darkener {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.5);
+	z-index: 1;
+}
