--- a/style.css
+++ b/style.css
@@ -2,10 +2,18 @@ header, footer {
 	text-align: center;
 }
 
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	margin-left: 20%;
+	margin-right: 20%;
+}
+
 body {
 	background-image: url('./resources/opera.jpg');
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size:0cqi
   }
 
 main {
@@ -27,6 +35,7 @@ h2 {
 	display: block;
 	margin-bottom: 20px;
 	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	padding: 10px;
 }
 
 .button-logo {
