--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ footer {
 	background-color: rgba(255, 255, 255, 0.5);
 	position: fixed;
 	right: 1;
+	bottom: 0;
 }
 
 body {
@@ -39,6 +40,7 @@ h2 {
 	box-shadow: 0 0 10px rgba(0,0,0,0.5);
 	padding: 10px;
 	text-align: center;
+	height: 140px;
 }
 
 .button-logo {
