--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ header, footer {
 footer {
     padding: 0px 10px 0px 10px;
 	background-color: rgba(255, 255, 255, 0.5);
-	border-radius: 10px;
 	position: fixed;
 	right: 1;
 	bottom: 0;
@@ -32,7 +31,7 @@ section {
 h1 {
 	color: white;
 	font-family: monospace;
-	background-color: rgb(46 35 27);
+	text-shadow: 5px 5px 5px #000000, 5px 5px 5px #2e211b;
 	border-radius: 10px;
 }
 
@@ -50,6 +49,11 @@ h2 {
 	padding: 10px;
 	text-align: center;
 	height: 140px;
+}
+
+.social-link:hover {
+	box-shadow: 0 0 10px rgba(0,0,0,0.75);
+	cursor: pointer;
 }
 
 .button-logo {
