--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h2 {
 
 .social-link:hover {
 	box-shadow: 0 0 10px rgba(0,0,0,0.75);
-	background-color:rgba(255, 255, 255, 0.40)
+	background-color:rgba(255, 255, 255, 0.40);
 	cursor: pointer;
 }
 
