--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body {
 	background-image: url('./resources/opera.jpg');
 	background-repeat: no-repeat;
 	background-size: auto;
-	background-position: top;  
+	background-position: top;
+	background-color: rgb(0 0 0 / 30%);
+    background-blend-mode: color;
 }
 
 main {
