--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ section {
 }
 
 h1 {
-	color: white;
+	color: chartreuse;
 	font-family: monospace;
 	text-shadow: 5px 5px 5px #000000, 5px 5px 5px #2e211b;
 	border-radius: 10px;
